--- a/kanban/index.html
+++ b/kanban/index.html
@@ -6,8 +6,8 @@
     <title>Kanban</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
-    <script src="modal.js" type="module" defer></script>
-    <script src="form-card.js" type="module" defer></script>
+    <script src="modal.js" defer></script>
+    <script src="form-card.js" defer></script>
 </head>
 <body>
     <div class="header">
